# PyAMCParser

./: .gitignore  Makefile  README.md  amc_test.py  demo.py  pyproject.toml  setup.py
amcparser/: Joint.py  Viewer.py  __init__.py  amc_parser.py
src/amc_parser/: Viewer.py  __init__.py
